insert list und insert produkt  hinzufugen
