# app/products/models.py
@@ -1,9 +1,10 @@
 # -*- coding: utf-8 -*-
-from sqlalchemy import Column, Integer, ForeignKey, String, Float, DateTime
+from datetime import datetime
+from sqlalchemy import Column, Integer, ForeignKey, String, Float
 from sqlalchemy.orm import relationship, backref
 
+from ..utils.gen_utils import validate_format_date
 from ..utils.database import Base
-from ..utils.gen_utils import hash_with_md5
 
 
 class Products(Base):
@@ -15,7 +16,9 @@ class Products(Base):
     user = relationship("Users", backref=backref("products"))
     name = Column(String(25), nullable=False)
     price = Column(Float, nullable=False, default=0.0)
-    date_of_publish = Column(DateTime, nullable=False)
+    date_of_publish = Column(
+        String(10), nullable=False, default=datetime.now().strftime("%Y-%m-%d")
+    )
     description = Column(String(255))
 
     # pylint: disable=R0913
@@ -32,7 +35,11 @@ class Products(Base):
         self.id_user = id_user
         self.name = name
         self.price = price
-        self.date_of_publish = date_of_publish
+        self.date_of_publish = (
+            validate_format_date(date_of_publish, "%Y-%m-%d")
+            if date_of_publish
+            else None
+        )
         self.description = description
 
     def update(self, data: dict):
@@ -48,14 +55,13 @@ class Images(Base):
 
     id_image = Column(Integer, primary_key=True, nullable=False)
     id_product = Column(Integer, ForeignKey("products.id_product"), nullable=False)
+    product = relationship("Products", backref="images")
     url_prefix = Column(String(255), nullable=False)
 
-    def __init__(self, id_image=None, id_product=None):
+    def __init__(self, id_image=None, id_product=None, url_prefix=None):
         self.id_image = id_image
         self.id_product = id_product
-        self.url_prefix = (
-            f"image{hash_with_md5(id_image)}#prod{hash_with_md5(id_product)}"
-        )
+        self.url_prefix = url_prefix
 
     def delete(self):
         pass
