# app/products/views.py
@@ -2,7 +2,7 @@
 from flask import request, jsonify
 from flask import Blueprint
 
-from .utils import insert
+from .utils import get_all_products, insert
 
 app = Blueprint("Products API", __name__)
 
@@ -15,3 +15,9 @@ def create_product():
         return jsonify({"error": True, "message": err}), 405
 
     return insert(data_prod)
+
+
+@app.route("/product/list", methods=["GET"])
+def get_list_all_of_products():
+    products = get_all_products()
+    return jsonify({"error": False, "message": products}), 200
